tests/NormalTests/paczka1/small_fuzzy/56502740.err
Error in line 6: S241 S730 59,48
Error in line 11: Sn2B8 A882 87,9
